# OpenDX

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  config.status  config.status.lineno  configure  configure.ac  libtool  mkinstalldirs  output.bak  statHdrs.h  warnings  warnings.bak  warnings.original
fonts/: Makefile  Makefile.am  Makefile.in  README  area.dx  cyril_d.dx  gothiceng_t.dx  gothicger_t.dx  gothicit_t.dx  greek_d.dx  greek_s.dx  italic_d.dx  italic_t.dx  roman_d.dx  roman_dser.dx  roman_ext.dx  roman_sfix.dx  roman_tser.dx  script_d.dx  script_s.dx  variable.dx
help/: HelpDir  HelpNotAvailable  Makefile  Makefile.am  Makefile.in  dxall1  dxall10  dxall100  dxall1000  dxall1001  dxall1002  dxall1003  dxall1004  dxall1005  dxall1006  dxall1007  dxall1008  dxall1009  dxall101  dxall1010  dxall1011  dxall1012  dxall1013  dxall1014  dxall1015  dxall1016  dxall1017  dxall1018  dxall1019  dxall102  dxall1020  dxall1021  dxall1022  dxall1023  dxall1024  dxall1025  dxall1026  dxall1027  dxall1028  dxall1029  (+1269 more)
html/: Help.idx  Makefile  Makefile.am  Makefile.in  README.htm  README_SMP.htm  README_alphax.htm  README_hp700.htm  README_ibm6000.htm  README_intelnt.htm  README_sgi.htm  README_solaris.htm  allguide.htm  insguide.htm  notfound.htm  proguide.htm  qikguide.htm  refguide.htm  search.js  srchhelp.htm  srchidx.js  srchindx.htm  srchnav.htm  usrguide.htm
html/images/: Makefile  Makefile.am  Makefile.in
html/pages/: Makefile  Makefile.am  Makefile.in  insgu002.htm  insgu003.htm  insgu004.htm  insgu005.htm  insgu006.htm  insgu007.htm  insgu008.htm  insgu009.htm  insgu010.htm  insgu011.htm  insgu012.htm  insgu013.htm  insgu014.htm  insgu015.htm  insgu016.htm  insgu017.htm  insgu018.htm  insgu019.htm  insgu020.htm  insgu021.htm  insgu022.htm  insgu023.htm  insgu024.htm  insgu025.htm  insgu026.htm  insgu027.htm  insgu028.htm  insgu029.htm  insgu030.htm  insgu031.htm  insgu032.htm  insgu033.htm  insgu034.htm  insgu035.htm  insgu036.htm  insgu037.htm  insgu038.htm  (+632 more)
include/dx/: Makefile  Makefile.am  Makefile.in  UserInteractors.h  advanced.h  arch.h  array.h  arrayhandles.h  basic.h  cache.h  camera.h  clipped.h  component.h  dx.h  error.h  extract.h  field.h  geometry.h  group.h  grow.h  hash.h  helper.h  image.h  import.h  invalid.h  lexical.h  light.h  memory.h  modflags.h  object.h  partition.h  pending.h  pick.h  private.h  rel_1_bc.h  render.h  resampling.h  screen.h  seglist.h  string.h  (+4 more)
src/exec/: Makefile  Makefile.am  Makefile.in
src/exec/dpexec/: Makefile  Makefile.am  Makefile.in  _eval.h  _macro.h  _variable.h  attribute.h  background.c  background.h  cache.c  cache.h  cachegraph.c  cachegraph.h  ccm.c  ccm.h  command.c  command.h  compile.h  config.h  context.c  context.h  crc.c  crc.h  d.c  d.h  ddx.c  distconnect.c  distp.h  distpacket.c  distqueue.c  dpattribute.c  dpparse.c  dxThreadMain.cpp  dxThreadMain.h  dxmain.c  dxmain.h  dxpfsmgr.c  dxpfsmgr.h  evalgraph.c  evalgraph.h  (+70 more)
src/exec/dxexec/: Makefile  Makefile.am  Makefile.in  main.c  tmain.cpp
src/exec/dxmods/: Makefile  Makefile.am  Makefile.in  _autocolor.c  _autocolor.h  _autogray.c  _autogray.h  _cat_util.c  _color.c  _colormap.c  _colormap.h  _compcmplx.c  _compexec.c  _compinput.c  _complex.c  _compoper.c  _compoper.h  _compoper1.c  _compoper2.c  _compparse.c  _compparse.h  _compputils.c  _compputils.h  _compute.h  _connectgrids.c  _connectgrids.h  _connectvor.c  _connectvor.h  _construct.c  _construct.h  _divcurl.c  _divcurl.h  _getfield.c  _getfield.h  _gif.c  _glyph.c  _glyph.h  _gradient.c  _gradient.h  _grid.c  (+271 more)
src/exec/hwrender/: Makefile  Makefile.am  Makefile.in  hwClientMessage.c  hwClientMessage.h  hwClipped.c  hwClipped.h  hwCursorInteractor.c  hwCursorInteractor.h  hwDebug.h  hwDeclarations.h  hwDraw.c  hwFlags.h  hwGather.c  hwGather.h  hwGlobeEchoDef.h  hwGroupInteractor.c  hwInitScreen.c  hwInteractor.c  hwInteractor.h  hwInteractorEcho.h  hwList.c  hwList.h  hwMaterials.c  hwMaterials.h  hwMatrix.c  hwMatrix.h  hwMemory.c  hwMemory.h  hwNavigateInteractor.c  hwObject.c  hwObject.h  hwObjectHash.c  hwObjectHash.h  hwPaint.c  hwPolyline.c  hwPortHandle.c  hwPortLayer.h  hwQmesh.c  hwQmesh.h  (+25 more)
src/exec/libdx/: Makefile  Makefile.am  Makefile.in  array.c  array.lo  arrayClass.X  arrayClass.c  arrayClass.h  axes.c  basic.c  basic.lo  binSort.c  binSort.h  box.c  box.lo  buffer.Z  buffer.c  callm_init.c  callm_winit.c  callm_xinit.c  cameraClass.X  cameraClass.c  cameraClass.h  class  class.awk  client.c  client.lo  clipped.c  clipped.lo  clippedClass.X  clippedClass.c  clippedClass.h  component.c  component.lo  composite.c  composite.lo  cstarray.c  cstarray.lo  cubesII.c  cubesIIClass.X  (+216 more)
src/misc/: Makefile  Makefile.am  Makefile.in  arch.mak  arch.mak.in  dx.c  dx.h  dxlocal  utils.c  utils.h
src/uipp/base/: ActiveItemDictionary.h  AllocatorDictionary.h  Application.C  Application.h  ApplyFileDialog.C  ApplyFileDialog.h  Base.h  ButtonInterface.C  ButtonInterface.h  CascadeMenu.C  CascadeMenu.h  Client.h  CloseWindowCommand.C  CloseWindowCommand.h  CmdEntry.C  CmdEntry.h  Command.C  Command.h  CommandInterface.C  CommandInterface.h  CommandScope.h  ConfirmedCommand.C  ConfirmedCommand.h  DXStrings.h  DXTensor.C  DXTensor.h  DXType.C  DXType.h  DXValue.C  DXValue.h  DefaultingDictionary.h  DeferrableAction.C  DeferrableAction.h  Definition.h  Dialog.C  Dialog.h  DialogData.h  DialogManager.C  DialogManager.h  Dictionary.C  (+140 more)
src/uipp/dxl/: Makefile  Makefile.am  Makefile.in  close.c  conn.c  connect.c  dict.c  dict.h  dxlP.h  execute.c  exit.c  handlers.c  load.c  object.c  open.c  os2.c  query.c  save.c  send.c  sequencer.c  socket.c  value.c  windows.c  x11.c
src/uipp/dxui/: AccessNetworkPanelsCommand.C  AccessNetworkPanelsCommand.h  ColormapDefinition.C  ColormapDefinition.h  ColormapEditCommand.C  ColormapEditCommand.h  ColormapFileCommand.C  ColormapFileCommand.h  ColormapNode.C  ColormapNode.h  (+228 more)
windows/: Makefile  Makefile.am  Makefile.in  README  ar  cc  cpp  cxx  lib  mkdep  msenv
(+922 files in other folders)
