## Process this file with automake to produce Makefile.in

fontdir = $(prefix)/dx/fonts

font_DATA = \
	README area.dx cyril_d.dx \
	fixed.dx gothiceng_t.dx gothicger_t.dx gothicit_t.dx greek_d.dx \
	greek_s.dx italic_d.dx italic_t.dx pitman.dx \
	roman_d.dx roman_dser.dx roman_ext.dx roman_s.dx roman_sfix.dx \
	roman_tser.dx script_d.dx script_s.dx \
	variable.dx

EXTRA_DIST = $(font_DATA)
